--- a/css/category.css
+++ b/css/category.css
@@ -435,21 +435,26 @@
     font-weight: 400;
 }
 
-.sort {
-    position: relative;
-}
-
-.sort span {
-    font-weight: 500;
-}
-
-.sort-select {
+#category-sort button {
     border: 2px solid var(--main-blue);
     background-color: transparent;
     border-radius: 5px;
-    padding: 6px 20px;
-    margin-left: 10px;
+    padding: 10px;
     cursor: pointer;
+    font-style: normal;
+    color: var(--main-blue);
+    font-size: 14px;
+    max-height: 35px;
+}
+
+#category-sort button::after {
+    background-image: url('../img/icons/arrow-filter-blue.svg');
+    width: 9px;
+    height: 6px;
+}
+
+#category-sort .itc-select__dropdown {
+    max-height: none;
 }
 
 .sort::after {
