--- a/css/category.css
+++ b/css/category.css
@@ -607,6 +607,56 @@ ul.products-pagination {
 
 .product-card.row .label-container {
     max-width: 100%;
+    padding: 10px;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.product-card.row .label {
+    position: relative;
+    font-size: 0;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    margin: 0;
+}
+
+.label .label-hint {
+    position: absolute;
+    padding: 10px;
+    z-index: 10;
+    top: 100%;
+    left: 0;
+    min-width: 200px;
+    display: none;
+}
+
+.label .label-hint-content {
+    background-color: #fff;
+    color: var(--text-black-color);
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 12px;
+    position: relative;
+}
+
+.label .label-hint a {
+    color: var(--hover-blue);
+}
+
+.label .label-hint-content::before {
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: 100%;
+    left: 10%;
+    border-width: 0 8px 8px 8px;
+    border-style: solid;
+    border-color: #fff transparent;
 }
 
 .product-card.row .fast-view-btn {
@@ -716,7 +766,6 @@ ul.products-pagination {
 .product-card.row .product-card__right-buy {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .product-card.row .product-card__footer-buttons {
