--- a/css/compare.css
+++ b/css/compare.css
@@ -32,16 +32,18 @@
     border-radius: 5px;
 }
 
+.swiper-compare {
+    padding-top: 35px;
+    margin-top: -35px;
+}
+
 .swiper-compare:not(.active) {
     display: none;
 }
 
-.compare__products {
-    margin-top: 35px;
-}
-
 .compare__products-inner {
     position: relative;
+    margin-top: 35px;
 }
 
 .swiper-compare-next-button,
@@ -51,7 +53,7 @@
 
 .close-btn--compare {
     top: -32px;
-    right: -20px;
+    right: -22px;
     z-index: 5;
     width: 32px;
     height: 32px;
