--- a/css/media.css
+++ b/css/media.css
@@ -191,6 +191,15 @@
     .product-tabs__slider {
         padding: 0;
     }
+
+    .product-card.row .product-card__info-box {
+        margin-left: 25px;
+    }
+
+    .product-card.row .product-card__buy-click,
+    .product-card.row .product-card__buy-cart {
+        padding: 15px 20px;
+    }
 }
 
 @media (max-width: 1200px) {
@@ -344,6 +353,34 @@
     .catalog__categories {
         grid-template-columns: repeat(3, 1fr);
     }
+
+    .product-card.row .product-info__delivery, 
+    .product-card.row .product-card__article {
+        margin-left: 10px;
+    }
+
+    .product-card.row .product-card__buy-click,
+    .product-card.row .product-card__buy-cart {
+        padding: 15px;
+    }
+
+    .product-card.row .product-card__img-box {
+        width: 180px;
+        height: 180px;
+    }
+
+    .product-card.row .round-btn-card {
+        width: 35px;
+        height: 35px;
+    }
+
+    .product-card.row .round-btn-card svg {
+        max-width: 14px;
+    }
+}
+
+@media (max-width: 1024px) {
+
 }
 
 @media (max-width: 992px) {
@@ -793,6 +830,15 @@
     .popular-card:hover .popular__img img {
         transform: none;
     }
+
+    .products__main.rows {
+        display: none;
+    }
+
+    .products__main.tiles {
+        display: grid;
+    }
+
 }
 
 @media (max-width: 820px) {
@@ -1601,6 +1647,10 @@
     .compare-feedback__inner {
         padding: 25px;
     }
+
+    .catalog__categories-box img {
+        max-width: 15px;
+    }
 }
 
 @media (max-width: 400px) {
@@ -2125,6 +2175,22 @@
 
     .close-btn--compare:hover svg path {
         fill: var(--main-black);
+    }
+
+    .label:hover .label-hint,
+    .label-hint:hover {
+        display: block;
+    }
+
+    .product-card.row .label-container:hover {
+        flex-direction: column;
+    }
+
+    .product-card.row .label-container:hover .label {
+        font-size: 12px;
+        width: auto;
+        height: auto;
+        border-radius: 5px;
     }
 
     /* HOVER END */
