Начал делать страницу авторизации

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import url('./product.css');
 @import url('./personal.css');
 @import url('./compare.css');
+@import url('./auth.css');
 
 
 /* HEADER START */
