--- a/css/product.css
+++ b/css/product.css
@@ -352,12 +352,21 @@
     width: 100%;
 }
 
+.mobile-product__price .product-box__cost-type:not(:first-child) {
+    margin-top: 15px;
+}
+
 .mobile-product__price .product-box__price-header {
     border: none;
     padding: 0;
     background-color: #fff;
     border-radius: 10px;
-    padding: 15px;
+    padding: 15px 50px 15px 15px;
+    align-items: flex-start;
+}
+
+.mobile-product__price .round-btn--fav {
+    margin-top: 15px;
 }
 
 .mobile-product__price .product-box__price-buttons {
