Сделал адаптив корзины; дописал скрипты для мобильной версии корзины; пофиксил некоторые стили и скрипты

--- a/css/auth.css
+++ b/css/auth.css
@@ -14,7 +14,7 @@
     width: 20px;
 }
 
-.header__mobile-auth-title {
+.header__mobile-title {
     width: 100%;
     font-size: 16px;
     font-weight: 500;
