--- a/css/media.css
+++ b/css/media.css
@@ -20,11 +20,18 @@
     }
 
     .swiper-button-next {
-        right: -14px !important;
+        right: -14px;
     }
 
     .swiper-button-prev {
-        left: -14px !important;
+        left: -14px;
+    }
+
+    .swiper-button-prev.swiper-compare-prev-button {
+        left: 0;
+    }
+    .swiper-button-next.swiper-compare-next-button {
+        right: 0;
     }
 
     .popular-grid {
@@ -376,6 +383,30 @@
 
     .product-card.row .round-btn-card svg {
         max-width: 14px;
+    }
+
+    .cart-aside {
+        max-width: 260px;
+    }
+
+    .cart-item__row,
+    .cart-list__header {
+        grid-template-columns: 300px 100px 100px 70px 100px;
+        gap: 5px;
+    }
+
+    .cart-item__counter button.minus,
+    .cart-item__counter button.plus {
+        padding: 0 15px;
+    }
+
+    .cart-item__sum .old-price .discount {
+        font-size: 10px;
+        padding: 0 2px;
+    }
+
+    .cart-calc__price p:not(.price) {
+        max-width: 50%;
     }
 }
 
@@ -839,6 +870,106 @@
         display: grid;
     }
 
+    .cart-page .info,
+    .cart-list__header,
+    .cart-list__tools,
+    .cart-aside .product-box__delivery-options,
+    .cart-total__sum,
+    .promocode-error,
+    .cart-item__tags {
+        display: none;
+    }
+
+    .cart__inner {
+        flex-direction: column;
+    }
+
+    .cart-aside {
+        bottom: 75px;
+        top: auto;
+        max-width: none;
+        background-color: var(--bg-white);
+    }
+
+    .cart-total {
+        background-color: transparent;
+        padding: 0;
+        padding-top: 15px;
+    }
+
+    .cart-total__header {
+        background-color: #fff;
+        padding: 10px;
+        border-radius: 10px;
+    } 
+
+    .cart-total__header-text p:first-child {
+        font-weight: 600;
+        color: var(--text-black-color);
+        font-size: 14px;
+    }
+
+    .cart-total__header-text p:last-child {
+        display: block;
+    }
+
+    .cart-total__header-result,
+    .cart-calc {
+        padding: 0;
+        border: none;
+    }
+
+    .cart-calc {
+        margin-top: 10px;
+    }
+
+    .cart-calc__price p {
+        font-size: 14px;
+    }
+
+    form.cart-promocode {
+        padding: 25px 10px;
+        background-color: #fff;
+        border-radius: 10px;
+    }
+
+    .promocode-button {
+        right: 25px;
+    }
+
+    .cart-mobile__choice,
+    .cart-item__checkbox {
+        display: block;
+    }
+
+    form.cart-promocode,
+    .rect-btn--order {
+        margin-top: 10px;
+    }
+
+    .cart .cart-item {
+        padding: 10px;
+        margin-top: 0;
+        background-color: #fff;
+        border-radius: 10px;
+    }
+
+    .cart .cart-item + .cart-item {
+        border: none;
+        padding-top: 10px;
+        margin-top: 10px;
+    }
+
+    .cart__inner {
+        padding-top: 10px;
+    }
+
+    .cart-item__row {
+        display: flex;
+        justify-content: space-evenly;
+        padding: 0;
+        gap: 10px;
+    }
 }
 
 @media (max-width: 820px) {
@@ -1109,6 +1240,58 @@
         margin-top: 15px;
         justify-content: space-between;
     }
+
+    .cart-item__row {
+        justify-content: space-between;
+    }
+
+    .cart-item__additional {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .cart-item__article {
+        display: block;
+    }
+    .cart-item__left ~ div:not(.cart-item__right) {
+        display: none;
+    }
+
+    .cart-item__right {
+        display: flex;
+        flex-direction: column;
+        /* width: 20%; */
+    }
+
+    .cart-item__right .cart-item__buttons {
+        display: flex;
+        justify-content: flex-end;
+        gap: 5px;
+    }
+
+    .cart-item__right .cart-item__buttons button {
+        border-radius: 50%;
+        border: 1px solid var(--bg-white);
+        padding: 8px;
+        min-width: 40px;
+        min-height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .cart-item__name {
+        max-width: none;
+    }
+    .cart-item__right .cart-item__sum {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: flex-end;
+    }
+
+    .cart-item__right .cart-item__sum .old-price .discount {
+        display: none;
+    }
 }
 
 @media (max-width: 620px) {
@@ -1175,6 +1358,9 @@
     .compare-feedback__form-row {
         flex-direction: column;
         gap: 10px;
+    }
+    .cart-item__right .cart-item__sum .current-price {
+        font-size: 14px;
     }
 }
 
@@ -1651,6 +1837,55 @@
     .catalog__categories-box img {
         max-width: 15px;
     }
+    .cart-item__counter button.minus{
+        padding: 0 10px 0 15px;
+    }
+    .cart-item__counter button.plus{
+        padding: 0 15px 0 10px;
+    }
+
+    .cart-item__counter span,
+    .cart-item__counter button {
+        font-size: 10px;
+    }
+
+    .cart-item__right .cart-item__buttons button {
+        min-width: 25px;
+        min-height: 25px;
+    }
+
+    .cart-item__right .cart-item__buttons button svg {
+        width: 10px;
+        height: 10px;
+    }
+    .cart-item__name-link,
+    .cart-item__right .cart-item__sum .current-price {
+        font-size: 12px;
+    }
+    .cart-item__status,
+    .cart-item__article,
+    .cart-item__color,
+    .cart-item__sum .old-price .price {
+        font-size: 8px;
+    }
+    .cart-item__left {
+        gap: 5px;
+    }
+    .cart-item__row {
+        gap: 2px;
+    }
+    .cart-calc__price p:not(.price) {
+        font-size: 10px;
+    }
+    .cart-calc__price p.price {
+        font-size: 12px;
+    }
+    .cart-calc__price + .cart-calc__price {
+        margin-top: 5px;
+    }
+    .cart {
+        margin-bottom: 50px;
+    }
 }
 
 @media (max-width: 400px) {
@@ -2089,6 +2324,10 @@
 
     .cart-item__delete-btn:hover svg path {
         fill: var(--main-blue);
+    }
+
+    .cart-item__fav-btn:hover svg path {
+        stroke: var(--main-blue);
     }
 
     .filter-items__show-results:hover::before {
